--- a/src/index.html
+++ b/src/index.html
@@ -16,23 +16,7 @@
     <!-- Page Content Holder -->
     <div id="content">
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-
-                <div class="navbar-header">
-                    <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-                        <i class="glyphicon glyphicon-align-left"></i>
-                        <span>Toggle</span>
-                    </button>
-                </div>
-
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a routerLink="/">Logout</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <app-header></app-header>
         <app-root></app-root>
     </div>
 </div>
@@ -43,9 +27,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#sidebarCollapse').on('click', function () {
-            $('#sidebar').toggleClass('active');
-        });
+
     });
 </script>
 </body>
